tests/ui/consts/const-suggest-feature.stderr
error[E0658]: `async` blocks are not allowed in constants
  --> $DIR/const-suggest-feature.rs:5:13
   |
LL |     let x = async { 13 };
   |             ^^^^^^^^^^^^
   |
   = note: see issue #85368 <https://github.com/rust-lang/rust/issues/85368> for more information
   = help: add `#![feature(const_async_blocks)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0493]: destructor of `{async block@$DIR/const-suggest-feature.rs:5:13: 5:18}` cannot be evaluated at compile-time
  --> $DIR/const-suggest-feature.rs:5:9
   |
LL |     let x = async { 13 };
   |         ^ the destructor for this type cannot be evaluated in constants
...
LL | };
   | - value is dropped here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0493, E0658.
For more information about an error, try `rustc --explain E0493`.
